# use-case-3-home-energy-management

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
home_energy_management/: baseline_algorithm.py  decision_algo.py  example.py  example_ddpg_with_server.py  example_ppo_with_server.py  example_simplified.py  example_with_server.py  naive_decision_algo.py  ppo_algorithm.py
home_energy_management/device_simulators/: device_utils.py  electric_vehicle.py  gateway.py  heating.py  photovoltaic.py  simple_device.py  storage.py  utils.py
home_energy_management/evaluation/: evaluation_baseline.csv  evaluation_ppo.csv  evaluation_ppo_vs_baseline.py
