#
# Config file for building Home Energy Management package in python
#
# Copyright 2024 Atende Industries
# Author: Agnieszka Frąc
#


[build-system]
requires = ["setuptools>=61", "typing_extensions"]
build-backend = "setuptools.build_meta"

[project]
name = "home-energy-management"
version = "2.2.4"
description = "Home energy management: decision algorithm and end devices simulators"
requires-python = ">=3.10"
dynamic = ["dependencies"]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}